--- a/App-Production/backend-deployment/backend-SA.yaml
+++ b/App-Production/backend-deployment/backend-SA.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: app-service-account
+  name: backendapp-service-account
   namespace: devsecops-prod
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -30,7 +30,7 @@ metadata:
   namespace: devsecops-prod
 subjects:
 - kind: ServiceAccount
-  name: app-service-account
+  name: backendapp-service-account
   namespace: devsecops-prod
 roleRef:
   kind: Role
