--- a/App-Production/backend-deployment/backend-storage.yaml
+++ b/App-Production/backend-deployment/backend-storage.yaml
@@ -5,11 +5,11 @@ metadata:
   namespace: devsecops-prod
 spec:
   capacity:
-    storage: 5Gi  # Adjust as needed
+    storage: 5Gi  
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: /mnt/data/backend-app  # Local storage path on your nodes
+    path: /mnt/data/backend-app  
 
 ---
 
@@ -23,4 +23,4 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 5Gi  # Match the storage size of the PersistentVolume
+      storage: 5Gi
