--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon src/app.js"
+    "start": "nodemon src/app.js",
+    "build": "react-scripts build"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -23,6 +24,7 @@
 "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.2.2",
     "sequelize": "^6.37.3",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "react-scripts": "^5.0.0"
   }
 }
